<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="3"
            android:gravity="center|right"
            android:text="@string/str_cero"
            android:textSize="48sp" />
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/thumbnail_height"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSiete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_siete" />

            <Button
                android:id="@+id/btnOcho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ocho" />

            <Button
                android:id="@+id/btnNueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nueve" />

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_plus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cuatro" />

            <Button
                android:id="@+id/btnCinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cinco" />

            <Button
                android:id="@+id/btnSeis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_seis" />

            <Button
                android:id="@+id/btnResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_uno" />

            <Button
                android:id="@+id/btnDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_dos" />

            <Button
                android:id="@+id/btnTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_tres" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mult" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/str_cero" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_equals" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_div" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>